css/main.css
/* ... */
.ast-nav li {
  font-size: 24px;
  font-family: neosans;
  color: #939597;
  width: 100px
}

.ast-nav li a {
padding: 5px 15px!important;
height: 40px;
line-height: 35px;
}

.ast-nav li:hover {
  background-color: #f0fbf2!important;
  border-radius: 5px
}

.ast-sub-section {
  margin-top: 30px
}

.ast-threat-report {
  background-color: #a0aabc;
  font-family: neosans;
  height: 200px
}

.tr-heading {
  color: #2b3b57;
  font-size: 24px;
  margin-left: 100px;
  margin-top: 75px;
}

.tr-sub-heading {
  color: #fff;
  font-size: 16px;
  margin-left: 100px
}

.ast-try-appknox {
  background-color: #ff3333;
  height: 200px;
}

.ta-heading {
  font-size: 24px;
  font-family: neosans;
  color: #fff;
  margin-top: 50px;
  margin-left: 30px
}

.stick {
  position: fixed!important;
  top: 100px;
}

.non-stick {
  margin-left: 20%
}

.move-next {
  float: right;
}

.move-next a {
  color: #f05b27!important;
  border-bottom: 1px dotted #f05b27;
}

/* END OF KNOW MORE PAGE */

@media (min-width: 768px) {
    .dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus {
        background-color: transparent !important;
        color: #fff;
    }

    #resource-dropdown .active {
        color: #fff !important;
        transition: all .35s ease-out;
    }

    .navbar-nav>li>.dropdown-menu {
        position: fixed;
        text-align: center;
        width: 100%;
        background: #454545;
    }

    #ak-menu {
        float: right;
        margin-right: 130px;
    }

    .dropdown-menu>li {
        display: inline-block;
    }

    .dropdown-menu>li>a {
        color: #999;
    }

    .navbar-nav>li>a {
        text-shadow: none;
        color: #000;
        margin-top: 10px;
    }

    .nav>li>a:hover,.nav .open>a:hover,.nav .open>a:focus {
        background: none;
    }

    a:focus {
        background: none !important;
    }/*#ak-header{
        border-bottom: 1px solid #E9E9E9;
      }*/

}

@media (max-width: 990px) {

    .navbar-nav {
        margin-left: 4%;
    }
    .year-menu{
      margin-left: 30px;
    }
    .mentions-text{
      text-align: left!important;
      margin-left: 50px;
    }
    .banner-main-section{
      margin-top: 0px!important;
    }
    .banner-top img{
      display: none!important;
    }


  #ak-menu {
    margin-right: 100px!important;
    float: left;
  }
  .request-menu{
    margin-right: 40px;
  }


}

@media (max-width: 1200px) {
  .scan-enter {
    margin-bottom: -8px;
  }
}

@media (max-width: 1024px) {
    .client-name {
      top: 320px;
      right: 100px;
    }
    .testimonial-section{
      height: 350px;
    }
    .logo-pos{
      margin-top: 10px;
    }
    .section-collapse{
      width: 90%;
      margin-bottom: 10px;
    }
    .sticky-section{
      width: 90%;
    }
    .navbar-nav {
        margin-left: 0%;
    }
    .request-menu{
      margin-right: 40px;
    }
    .press-container{
      margin-top: 120px;
    }
    .sign-pos{
      margin-top: 20px;
    }
    .shield-sub-text{
      font-size: 15px!important;
      margin-right: -60px!important;
    }
    .banner-top img{
      margin-left: 100px!important;
    }
}

@media (min-width: 768px) and (max-width: 990px) {
    .plan-top-line{
      width: 40%;
    }
    .call-button {
      margin-left: 280px;
    }
    .request-button{
      display: block !important ;
      width: 30%;
      margin-left: 250px;
      margin-top: 5%
    }
    .plan-bottom-line{
      width: 20%;
    }
    .scan-list{
      width:30%;
      margin-left: 235px;
    }
    .scan-benifits{
      width:56%;
      margin-left: 235px;
    }
    .scan-enter{
      margin-left: 235px;
    }
    .enterprise-features{
      margin-left: 100px;
    }
    .main-nav-scrolled {
      width: 66%!important;
    }
    .year-menu{
      margin-left: -35px!important;
    }
}



@media (max-width: 767px) {
    .slide-img-zone{
      display: none;
}
}

@media (max-width: 760px) {
    #ak-slide-zone p {
        text-align: center;
    }

    #ak-slide-zone h1 {
        text-align: center;
    }

    #ak-slide-container {
        min-height: 375px;
    }

    .ak-slide div {
        text-align: center;
    }

    #text-slider {
        padding-top: 60px;
    }

    #ak-slide-zone {
        text-align: center;
    }

    .slide-img-zone {
        display: none;
    }

    #ak-slide-zone h1 {
        font-size: 35px;
    }

    #head-txt-14 {
        font-size: 30px;
    }

    #ak-radar-zone {
        margin-bottom: 10px;
        margin-top: 108px;
    }

    .member-data-zone {
        width: 30%;
        padding: 0 1.5%;
        margin-left: 12px;
    }

    #ak-cellphone-14 {
        position: relative;
        margin-top: 30px;
        max-width: 150px;
        margin-left: -44%;
    }

    #ak-dotted-circle {
        width: 70%;
    }

    #testimony-container {
        min-height: 250px;
    }
}

@media (max-width: 600px) {
    .half-block-container>li {
        float: none;
        text-align: center;
        width: 100%;
    }

    #head-txt-14 {
        margin-top: 4%;
    }

    .member-data-zone {
        width: 47%;
        padding: 0 1.5%;
        margin-left: 12px;
    }
}

@media (max-width: 600px) {
  .plan-type{
    margin-left: 70px;
  }

}
/* ... */

